{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 10,
  "lineage": "3683dc87-bd93-b7ee-7a8f-3274a4887812",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance-wallace-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa399d9c130ec923",
            "arn": "arn:aws:ec2:us-east-2:975635808270:instance/i-0ca29b7cddcd03b40",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca29b7cddcd03b40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c96ebc259f964b1a",
            "private_dns": "ip-10-0-1-144.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7b39cb160c279fe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb2b06c6973a1fa4",
            "tags": {
              "Name": "app-instance-wallace-terraform"
            },
            "tags_all": {
              "Name": "app-instance-wallace-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b9a3af09731e173d"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_elastic_ip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.app-nat-gateway",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_route_table_association.private_subnet_association",
            "module.network.aws_route_table_association.public_subnet_association",
            "module.network.aws_subnet.Private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wallace-app-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975635808270:security-group/sg-00a39bf8d0fce34e0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a39bf8d0fce34e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wallace-app-security-group",
            "name_prefix": "",
            "owner_id": "975635808270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wallace-app-Security-Group"
            },
            "tags_all": {
              "Name": "Wallace-app-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01df810fc5bf15918"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway_elastic_ip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.app-nat-gateway",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_route_table_association.private_subnet_association",
            "module.network.aws_route_table_association.public_subnet_association",
            "module.network.aws_subnet.Private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4cdfdca5826e66b",
            "association_id": "eipassoc-0ac0b434fcfea200d",
            "domain": "vpc",
            "id": "eipalloc-0a4cdfdca5826e66b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-075d562eda4dd0f17",
            "private_dns": "ip-10-0-1-106.us-east-2.compute.internal",
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-18-217-95-191.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.95.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wallace-Elastic_IP"
            },
            "tags_all": {
              "Name": "wallace-Elastic_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975635808270:internet-gateway/igw-012b07267b910a656",
            "id": "igw-012b07267b910a656",
            "owner_id": "975635808270",
            "tags": {
              "Name": "app-vpc-wallace-Internet-Gateway"
            },
            "tags_all": {
              "Name": "app-vpc-wallace-Internet-Gateway"
            },
            "vpc_id": "vpc-01df810fc5bf15918"
          },
          "dependencies": [
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "app-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4cdfdca5826e66b",
            "association_id": "eipassoc-0ac0b434fcfea200d",
            "connectivity_type": "public",
            "id": "nat-0a579c185d7716e95",
            "network_interface_id": "eni-075d562eda4dd0f17",
            "private_ip": "10.0.1.106",
            "public_ip": "18.217.95.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cb2b06c6973a1fa4",
            "tags": {
              "Name": "app-wallace-Nat-Gateway"
            },
            "tags_all": {
              "Name": "app-wallace-Nat-Gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_elastic_ip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975635808270:route-table/rtb-01f81993d5eac7143",
            "id": "rtb-01f81993d5eac7143",
            "owner_id": "975635808270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a579c185d7716e95",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "tags_all": {
              "Name": "Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01df810fc5bf15918"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.app-nat-gateway",
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975635808270:route-table/rtb-065b2bad1f07e053a",
            "id": "rtb-065b2bad1f07e053a",
            "owner_id": "975635808270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012b07267b910a656",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01df810fc5bf15918"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ec8859c9190dbb9",
            "route_table_id": "rtb-01f81993d5eac7143",
            "subnet_id": "subnet-077a04f8f7454754f"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_elastic_ip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.app-nat-gateway",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.Private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4b34721a8c49f07",
            "route_table_id": "rtb-065b2bad1f07e053a",
            "subnet_id": "subnet-0cb2b06c6973a1fa4"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975635808270:subnet/subnet-077a04f8f7454754f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077a04f8f7454754f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975635808270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-01df810fc5bf15918"
          },
          "dependencies": [
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975635808270:subnet/subnet-0cb2b06c6973a1fa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb2b06c6973a1fa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975635808270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-01df810fc5bf15918"
          },
          "dependencies": [
            "module.network.aws_vpc.app_vpc-wallace-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc-wallace-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975635808270:vpc/vpc-01df810fc5bf15918",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0776baf6aaf465136",
            "default_route_table_id": "rtb-0ad7325b7bd448a7c",
            "default_security_group_id": "sg-0b9a3af09731e173d",
            "dhcp_options_id": "dopt-b2be4edb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01df810fc5bf15918",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad7325b7bd448a7c",
            "owner_id": "975635808270",
            "tags": {
              "Name": "app-vpc-wallace"
            },
            "tags_all": {
              "Name": "app-vpc-wallace"
            }
          }
        }
      ]
    }
  ]
}